--- a/tt/incl/footer.tt
+++ b/tt/incl/footer.tt
@@ -1,4 +1,15 @@
 
+
+<div id="footer">
+<ul>
+  <li><a href=/copyright.html>Copyright</a></li>
+  <li><a href=/privacy.html>Privacy Policy</a></li>
+  <li><a href=/tos.html>Terms of Services</a></li>
+  <li><a href=/faq.html>FAQ</a></li>
+</ul>
+</div>
+
+<% adsense %>
 <% google_analytics %>
 </body>
 </html>
