working on the traceroute forms

--- a/tt/index.tt
+++ b/tt/index.tt
@@ -5,10 +5,7 @@ The <b>TraceRT</b> web providing access to many <b>tracerout</b> and <b>tracepat
 a major facelift. For now You can run traceroute from our server located in San Francisco by using the form below.
 </p>
 
-<form action="/traceroute">
-<input name="t" value="<% client %>" size="40" />
-<input type="submit" value="Run trace" />
-</form>
+<% INCLUDE 'incl/traceroute_form.tt' %>
 
 <% INCLUDE 'incl/resolver_form.tt' %>
 
