disable traceroute service from the site

--- a/tt/traceroute.tt
+++ b/tt/traceroute.tt
@@ -1,5 +1,12 @@
 
+
+<% FOR s IN servers %>
+
+<% END %>
+
+<!--
 <% INCLUDE 'incl/traceroute_form.tt' %>
+-->
 
 <% IF host %>
   Traceroute to <% host %>
