load database and show list of traceroute servers

--- a/tt/traceroute.tt
+++ b/tt/traceroute.tt
@@ -1,8 +1,12 @@
 
 
-<% FOR s IN servers %>
-
+<ul>
+<% FOR s IN gateways %>
+  <% IF s.service == 'trace' %>
+     <li><% s.country %> - <a href="http://<% s.homepage_url %><% s.path %>"><% s.organization %></a></li>
+  <% END %>
 <% END %>
+</ul>
 
 <!--
 <% INCLUDE 'incl/traceroute_form.tt' %>
