--- a/tt/incl/footer.tt
+++ b/tt/incl/footer.tt
@@ -10,6 +10,10 @@
 </div>
 -->
 
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
+  <script src="/js/semantic.min.js"></script>
+  <script src="/js/tracert.js"></script>
+
 <% adsense %>
 <% google_analytics %>
 </body>
