--- a/tt/incl/header.tt
+++ b/tt/incl/header.tt
@@ -1,6 +1,3 @@
-<% USE date %>
-<% USE HTML %>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,14 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title><% title %></title>
+  <title><% template.title || title %></title>
+
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
+
+  <link rel="stylesheet" type="text/css" href="/css/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/tracert.css">
+
+<!--
+  <link href="/blog/atom" rel="alternate" type="application/atom+xml" title ="Tracert news" />
+-->
 
 </head>
 <body>
-
-<div>
-<a href="/">home</a>
-<a href="/resolver">Resolve</a>
-<a href="/traceroute">Traceroute</a>
-<a href="/ping">Ping</a>
-</div>
+<% INCLUDE 'incl/menu.tt' %>
