--- a/tt/index.tt
+++ b/tt/index.tt
@@ -1,9 +1,21 @@
+<% META
+  title = "Traceroute from around the world"
+%>
 
-
-<p>
-The <b>TraceRT</b> web providing access to many <b>tracerout</b> and <b>tracepath</b> gateways is undergoing
-a major facelift. For now You can run traceroute from our server located in San Francisco by using the form below.
-</p>
+<main class="ui page grid">
+    <div class="row">
+        <div class="column">
+            <div class="ui message main">
+                <h1 class="ui header"><% template.title %></h1>
+                <p>
+                </p>
+                <p>
+                 The <b>TraceRT</b> web providing access to many <b>tracerout</b> and <b>tracepath</b> gateways is undergoing
+                 a major facelift. For now You can run traceroute from our server located in San Francisco by using the form below.
+                </p>
+<!--
+                <a href="https://github.com/Code-Maven/Code-Maven" class="ui blue button">GitHub &raquo;</a>
+-->
 
 <!--
 <% INCLUDE 'incl/traceroute_form.tt' %>
@@ -11,4 +23,11 @@ a major facelift. For now You can run traceroute from our server located in San 
 
 
 <% INCLUDE 'incl/resolver_form.tt' %>
+
+            </div>
+        </div>
+    </div>
+</main>
+
+
 
