--- a/tt/traceroute.tt
+++ b/tt/traceroute.tt
@@ -1,26 +1,48 @@
+<% META
+  title = "Traceroute from around the world"
+%>
+
+<main class="ui page grid">
+    <div class="row">
+        <div class="column">
+            <div class="ui message main">
+                <h1 class="ui header"><% template.title %></h1>
+                <p>
+                   <ul>
+                   <% FOR s IN gateways %>
+                     <% IF s.service == service %>
+                        <li><% s.country %> - <a href="http://<% s.homepage_url %><% s.path %>"><% s.organization %></a></li>
+                     <% END %>
+                   <% END %>
+                   </ul>
+                   
+                   <!--
+                   <% INCLUDE 'incl/traceroute_form.tt' %>
+                   -->
+                   
+                   <!--
+                   
+                   <% IF host %>
+                     Traceroute to <% host %>
+                     
+                     <pre>
+                     <% out %>
+                     </pre>
+                   <% END %>
+                   
+                   -->
+
+                </p>
+                <p>
+                </p>
+
+            </div>
+        </div>
+    </div>
+</main>
 
 
-<ul>
-<% FOR s IN gateways %>
-  <% IF s.service == service %>
-     <li><% s.country %> - <a href="http://<% s.homepage_url %><% s.path %>"><% s.organization %></a></li>
-  <% END %>
-<% END %>
-</ul>
 
-<!--
-<% INCLUDE 'incl/traceroute_form.tt' %>
--->
 
-<!--
 
-<% IF host %>
-  Traceroute to <% host %>
-  
-  <pre>
-  <% out %>
-  </pre>
-<% END %>
-
--->
 
