--- a/tt/incl/menu.tt
+++ b/tt/incl/menu.tt
@@ -1,5 +1,5 @@
     <nav class="ui fixed menu inverted navbar">
-        <a href="/" class="active brand item">Tracert</a>
+        <a href="/" class="active brand item">Home</a>
 
 
 <!--
