--- a/tt/index.tt
+++ b/tt/index.tt
@@ -8,10 +8,10 @@
             <div class="ui message main">
                 <h1 class="ui header"><% template.title %></h1>
                 <p>
+                 The <b>Tracert.com</b> site provides access to many <a href="/traceroute">tracerout</a>, <b>tracepath</b> and <a href="/ping">ping</a> gateways.
                 </p>
                 <p>
-                 The <b>TraceRT</b> web providing access to many <b>tracerout</b> and <b>tracepath</b> gateways is undergoing
-                 a major facelift. For now You can run traceroute from our server located in San Francisco by using the form below.
+                 If you would like to check what IP address a hostname resolves to, type it in the box below:
                 </p>
 <!--
                 <a href="https://github.com/Code-Maven/Code-Maven" class="ui blue button">GitHub &raquo;</a>
