--- a/tt/incl/footer.tt
+++ b/tt/incl/footer.tt
@@ -1,4 +1,15 @@
 
+
+    <div class="row">
+        <div class="column">
+           <% adsense %>
+        </div>
+   </div>
+</main>
+
+
+</main>
+
 <!--
 <div id="footer">
 <ul>
@@ -14,7 +25,6 @@
   <script src="/js/semantic.min.js"></script>
   <script src="/js/tracert.js"></script>
 
-<% adsense %>
 <% google_analytics %>
 </body>
 </html>
