remove computing the 'request'

--- a/tt/traceroute.tt
+++ b/tt/traceroute.tt
@@ -52,7 +52,7 @@
                         <div class="ui checkbox item field">
                            <input type="checkbox"  name="gw" id="gw_<% s.id %>" class="gw" value="<% s.id %>">
                            <label for="gw_<% s.id %>"><% s.country %> - <a href="<% s.homepage_url %>"><% s.organization %></a>
-                           <a href="<% s.request %>">R</a>
+                           <a href="<% s.url %><% host %>">R</a>
                            </label>
                         </div>
                      <% END %>
