add Digital Ocean banner

--- a/tt/gw_head.tt
+++ b/tt/gw_head.tt
@@ -1,1 +1,2 @@
-Head of gw
+<a href="/digitalocean" target="_blank"><img src="/images/ssd-virtual-servers-banner-2-728x90.jpg" /></a>
+<a href="/digitalocean" target="_blank">Digital Ocean</a> is our recommended hosting company.
