--- a/tt/incl/menu.tt
+++ b/tt/incl/menu.tt
@@ -22,10 +22,13 @@
             <a href="/" class="item">One more seperated link</a>
           </div>
         </div>
+-->
 
       <div class="menu right">
+        <a href="/resources" class="item">Resources</a>
+<!--
           <a href="/blog/atom" class="item"><i class="rss icon"></i></a>
-      </div>
 -->
+      </div>
     </nav> <!-- end nav -->
 
