--- a/tt/404.tt
+++ b/tt/404.tt
@@ -1,1 +1,8 @@
-<h1>404 Not found</h1>
+    <div class="row">
+        <div class="column">
+            <div class="ui message main">
+                <h1 class="ui header">404 Not found</h1>
+            </div>
+        </div>
+    </div>
+
