in development environment add a timestamp when loading the javascript file

--- a/tt/incl/footer.tt
+++ b/tt/incl/footer.tt
@@ -23,7 +23,7 @@
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
   <script src="/js/semantic.min.js"></script>
-  <script src="/js/tracert.js"></script>
+  <script src="/js/tracert.js<% timestamp %>"></script>
 
 <% INCLUDE 'incl/modals.tt' %>
 
