--- a/tt/incl/resolver_form.tt
+++ b/tt/incl/resolver_form.tt
@@ -1,6 +1,6 @@
 <form action="/resolver" method="POST">
    <div class="ui input">
-     <input name="arg" id="arg" value="<% hostname %>" size="40"  placeholder="perlmaven.com" />
+     <input name="arg" id="arg" value="<% hostname %>" size="40"  placeholder="Hostname to resolve" />
    </div>
    <input type="submit" value="Resolve" id="resolve" class="ui button" />
 </form>
