resolve IPv6 as well

--- a/tt/resolver.tt
+++ b/tt/resolver.tt
@@ -28,6 +28,21 @@ results.
   <% ELSE %>
     <h2>Could not resolve <% hostname %>.</h2>
   <% END %>
+
+
+  <% IF record_AAAA.size %>
+     <% IF record_AAAA.size == 1 %>
+        <h2>Resolution of <% hostname %> is <% record_AAAA.0 %></h2>
+     <% ELSE %>
+        <h2>Resolution of <% hostname %> resulted in the following IPv6 addresses: </h2>
+        <% FOR ip IN record_AAAA.sort.reverse %>
+           <h3><% ip %></h3>
+        <% END %>
+     <% END %>
+  <% ELSE %>
+    <h2><% hostname %> does not have IPv6 address.</h2>
+  <% END %>
+
 <% END %> 
 
 <% INCLUDE 'incl/resolver_form.tt' %>
