--- a/static/css/tracert.css
+++ b/static/css/tracert.css
@@ -43,5 +43,16 @@ body{
 	margin: 5px 0;
 }
 
+.item a {
+	text-decoration: none;
+}
+
+ul {
+	list-style-type: none;
+}
+li a {
+	text-decoration: none;
+}
+
 
 
